--- a/header.css
+++ b/header.css
@@ -1,1 +1,9 @@
-
+@media screen and  (min-width: 800px) {
+   
+    h1 {
+      font-size: 300%;
+        color: yellow;
+        background-color: white-space;
+       
+    }
+}
